@@ -1,6 +1,6 @@
 # define	MAJ_VERSION	2
 # define	MIN_VERSION	1
-int	version_build_no = 45;
-# define VERSION_BUILD_NO 45
-char	version_build_date[] = "Thu Sep  8 22:58:47 2011";
+int	version_build_no = 48;
+# define VERSION_BUILD_NO 48
+char	version_build_date[] = "Sat Sep 10 22:36:43 2011";
 
